[package]
name = "the_veiled_path"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
bevy = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_egui = "0.20.2"
egui_extras = "0.21.0"